Created and Styled Navbar

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -6,6 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
+	<style>
+
+		@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+		* {
+			font-family: 'PT Serif';
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+			background-color: rgb(240, 240, 240);
+		}
+
+	</style>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
