--- a/client/src/app.html
+++ b/client/src/app.html
@@ -12,12 +12,25 @@
 
 		* {
 			font-family: 'PT Serif';
+			margin: 0;
+			padding: 0;
 		}
 
 		body {
-			margin: 0;
-			padding: 0;
 			background-color: rgb(240, 240, 240);
+		}
+
+		::-webkit-scrollbar {
+			width: 5px;
+		}
+
+		::-webkit-scrollbar-thumb {
+			background-color: rgb(150, 150, 150);
+			border-radius: 2.5px;
+		}
+
+		::-webkit-scrollbar-track {
+			background-color: rgb(200, 200, 200);
 		}
 
 	</style>
